--- a/notebooks/KOH1.ipynb
+++ b/notebooks/KOH1.ipynb
@@ -20,7 +20,7 @@
     "from functions import gaussian, euclidean_distance, gaussian_second_derivative\n",
     "from network import Network\n",
     "\n",
-    "#os.chdir('..')"
+    "os.chdir('..')"
    ]
   },
   {
